@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="script.module.tulip" name="Tulip Library" version="3.1.0" provider-name="Twilight0">
+<addon id="script.module.tulip" name="Tulip Library" version="3.1.1" provider-name="Twilight0">
     <requires>
         <import addon="xbmc.addon" version="16.1.000"/>
         <import addon="script.module.kodi-six" version="0.0.2"/>
@@ -15,6 +15,8 @@
         <news>[B]3.1.X[/B]
 - Update user agent strings
 - Added a few more utilities
+- Add offscreen boolean parameter for ListItem
+- Bug fixes
 
 [B]3.0.X[/B]
 - Utilize certifi for net module
